fix stretched logos

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -120,6 +120,7 @@ section {
 }
 
 .partner-logo {
+  text-align: center;
   margin-bottom: 3rem;
 }
 
